<resources>
    <string name="app_name">App01</string>
    //Following strings are for MainActivity files
    <string name="helloToast">Hello! Toast.</string>
    <string name="count">COUNT</string>

    //Following strings are for simpleAsyncTask files
    <string name="simpleAsyncTask_initialMessageInTextView">I\'m ready to start work</string>
    <string name="simpleAsyncTask_Button_start_task">Start Task</string>
    <string name="SimpleAsyncTask_progressMessage">Napping…</string>
    <string name="simpleAsyncTask_button_string_search_books">Search Books</string>

    //Following strings are for BooksAsynTaskLoader files
    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Enter Book Title</string>
    <string name="no_results">No Results Found</string>
    <string name="BooksAsyncTaskLoader_string_loading"><![CDATA[Loading....]]></string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Developed for</string>
    <string name="nav_header_subtitle">Learning Purposes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //Following strings are for NavigationDrawer's menu options:
    <string name="menu_scoreCounter">ScoreCounterApp</string>
    <string name="menu_asyncTask">AsyncTaskApp</string>
    <string name="menu_asyncTaskLoader">AsyncTaskLoaderApp</string>
    <string name="menu_broadcastReciever">BroadcastReciever</string>
    <string name="menu_notifications">NotificationsApp</string>
    <string name="menu_alarmManager">TheAlarmManagerApp</string>
    <string name="menu_jobScheduler">JobSchedulerApp</string>
    <string name="menu_sharedPreferences">SharedPreferencesApp</string>
    <string name="menu_AppSettings">AppSettingsApp</string>
    <string name="menu_RoomLiveDataViewModel">RoomLiveDataViewModelApp</string>

    //Following strings are for BroadcastRecieverApp:
    <string name="fragment_broadcast_reciever_instructions">Plug in or out the power connection to recieve broadcast or click below button to send a customBroadcast and then recieve it</string>

    //Following strings are for AlarmManagerApp:
    <string name="alarmManagerFragment_string_alarm_off">Alarm Off</string>
    <string name="alarmManagerFragment_string_alarm_on">Alarm On</string>

    //Following strings are for JobSchedulerApp:
    <string name="jobSchedulerFragment_string_network_type_required">Network Type Required</string>
    <string name="jobSchedulerFragment_string_none">None</string>
    <string name="jobSchedulerFragment_string_any_network">Any Network</string>
    <string name="jobSchedulerFragment_string_wifi_only">Wifi only</string>
    <string name="jobSchedulerFragment_string_requires">Requires:</string>
    <string name="jobSchedulerFragment_string_schedule_jobs">Schedule Jobs</string>
    <string name="jobSchedulerFragment_string_cancel_jobs">Cancel Jobs</string>

    //Following strings are for SharedPreferencesApp:
    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>


</resources>
