<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/scoreCounterApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_scoreCounter" />
        <item
            android:id="@+id/asyncTaskApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_asyncTask" />
        <item
            android:id="@+id/asyncTaskLoaderApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_asyncTaskLoader" />
        <item
            android:id="@+id/broadcastRecieverApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_broadcastReciever" />
        <item
            android:id="@+id/notificationsApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/alarmManagerApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_alarmManager" />
        <item
            android:id="@+id/jobSchedulerApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_jobScheduler" />
        <item
            android:id="@+id/sharedPreferenceApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_sharedPreferences" />
        <item
            android:id="@+id/appSettingsApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_AppSettings" />
        <item
            android:id="@+id/roomLiveDataViewModelApp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_RoomLiveDataViewModel" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="@string/menu_share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="@string/menu_send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
