<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/viewPadding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/jobSchedulerFragment_string_network_type_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <RadioGroup
        android:id="@+id/jobSchedulerApp_radioGroup_networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/jobSchedulerApp_radioButton_noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/jobSchedulerFragment_string_none" />

        <RadioButton
            android:id="@+id/jobSchedulerApp_radioButton_anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobSchedulerFragment_string_any_network" />

        <RadioButton
            android:id="@+id/jobSchedulerApp_radioButton_wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobSchedulerFragment_string_wifi_only" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/jobSchedulerFragment_string_requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <Switch
            android:id="@+id/jobSchedulerApp_switch_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device Idle" />

        <Switch
            android:id="@+id/jobSchedulerApp_switch_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device Charging" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jobSchedulerApp_seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Override Deadline: "
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/jobSchedulerApp_seekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Set"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/jobSchedulerApp_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

    <Button
        android:id="@+id/jobSchedulerApp_button_scheduleJobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/jobSchedulerFragment_string_schedule_jobs" />

    <Button
        android:id="@+id/jobSchedulerApp_button_cancelJobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/jobSchedulerFragment_string_cancel_jobs" />

</LinearLayout>